:tada: 初步实现持久化防抖事件驱动模型
Signed-off-by: 菜鸟 <wdhlzd@163.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+.DS_Store
+temp
+explorations
+selenium-server.log
+browserstack.err
+.idea
+debug.log
+yalc.lock
+.yalc
+local.log
+_selenium-server.log
+packages/*/LICENSE
+tracing_output
+
 # Logs
 logs
 *.log
