--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vitepress": "1.0.0-rc.36",
     "vitepress-plugin-twoslash": "^0.9.18",
     "vitest": "^1.1.3",
+    "prettier": "^3.2.5",
     "vue": "^3.4.21"
   },
   "simple-git-hooks": {
