--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "author": "CaiNiao",
   "license": "GPL-2.0",
   "homepage": "https://gitee.com/MCaiNiaoM/cn-persist-pinia-plugin/blob/main/README.md",
-  "engines": {
-    "node": ">=18"
-  },
   "bugs": {
     "url": "https://gitee.com/MCaiNiaoM/cn-persist-pinia-plugin/issues"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
+    "prettier": "npx prettier . --write",
     "build": "stale-dep && pnpm -r --if-present run build",
     "test": "stale-dep && pnpm -r --if-present run test:run",
     "test:coverage": "stale-dep && pnpm -r --if-present run test:coverage",
@@ -34,8 +35,10 @@
     "@vitest/ui": "^1.1.3",
     "bumpp": "^9.2.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "happy-dom": "^12.10.3",
     "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "simple-git-hooks": "^2.9.0",
     "stale-dep": "^0.7.0",
     "tsup": "^8.0.1",
@@ -44,7 +47,6 @@
     "vitepress": "1.0.0-rc.36",
     "vitepress-plugin-twoslash": "^0.9.18",
     "vitest": "^1.1.3",
-    "prettier": "^3.2.5",
     "vue": "^3.4.21"
   },
   "simple-git-hooks": {
