:technologist: prettier、eslint、vscode settings 配置优化
Signed-off-by: 菜鸟 <wdhlzd@163.com>

--- a/packages/plugin/tsconfig.json
+++ b/packages/plugin/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "module": "ESNext",
     "moduleResolution": "Node",
     "strict": true,
@@ -10,5 +13,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "exclude": ["**/dist", "**/node_modules"]
+  "exclude": [
+    "**/dist",
+    "**/node_modules"
+  ]
 }
