--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "prettier": "npx prettier . --write",
+    "prettier": "prettier . --write",
     "build": "stale-dep && pnpm -r --if-present run build",
     "test": "stale-dep && pnpm -r --if-present run test:run",
     "test:coverage": "stale-dep && pnpm -r --if-present run test:coverage",
@@ -29,16 +29,16 @@
     "release:nuxt": "pnpm -F @cn-persist-pinia-plugin/nuxt run release"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.2",
     "@types/node": "^20.10.8",
     "@vitest/coverage-v8": "^1.1.3",
     "@vitest/ui": "^1.1.3",
     "bumpp": "^9.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "happy-dom": "^12.10.3",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
+    "prettier": "3.2.5",
     "simple-git-hooks": "^2.9.0",
     "stale-dep": "^0.7.0",
     "tsup": "^8.0.1",
