:bug: 发布脚本问题修复，发布前先构建
Signed-off-by: 菜鸟 <wdhlzd@163.com>

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -34,7 +34,7 @@
     "test:coverage": "vitest run --coverage",
     "test:run": "vitest --run",
     "release": "bumpp -t \"v%s\" -c \":bookmark: release v\"",
-    "publish": "npm publish"
+    "publish": "tsup --dts --format esm,cjs src/index.ts && npm publish"
   },
   "peerDependencies": {
     "pinia": "^2.0.0"
