--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cn-persist-pinia-plugin",
   "type": "module",
-  "version": "1.0.6",
+  "version": "1.0.5",
   "description": "Configurable persistence and rehydration of Pinia stores.",
   "author": "CaiNiao",
   "license": "GPL-2.0",
@@ -17,12 +17,12 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.cjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
   },
   "main": "dist/index.js",
-  "module": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
