--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "test:coverage": "stale-dep && pnpm -r --if-present run test:coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "docs": "vitepress dev docs",
+    "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs",
+    "docs:preview": "vitepress preview docs",
     "postinstall": "stale-dep -u",
     "release:plugin": "pnpm -F cn-persist-pinia-plugin run release",
     "release:nuxt": "pnpm -F @cn-persist-pinia-plugin/nuxt run release",
