--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -37,7 +37,7 @@
     "publish": "tsup --dts --format esm,cjs src/index.ts && npm publish"
   },
   "peerDependencies": {
-    "pinia": "^2.0.0",
+    "pinia": "^2.1.7"
   },
   "devDependencies": {
     "pinia": "^2.1.7"
